# compliancelint

./: .gitignore  .gitleaks.toml  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/routines/: daily-self-scan.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/sarif-export/: README.md  action.yml
.github/workflows/: ci.yml  sarif-export-smoke.yml  secret-scan.yml  test.yml
docs/: HG_VERIFIER_ROADMAP.md  INCREMENTAL_SCAN_ROADMAP.md  user-guide.md
docs-site/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  sidebars.ts
docs/site/: index.html
docs/sources/: README.md
scanner/: README.md  __init__.py  cli.py  server.py
scanner/core/: ai_recommended_scope.py  broken_link.py  bug_report.py  classification_client.py  config.py  context.py  enforce_paid_completion.py  error_response.py  evidence.py  obligation_engine.py  obligation_lookup.py  paths.py  pending_evidence.py  protocol.py  regulation_registry.py  scanner_log.py  state.py  telemetry.py  upgrade_hint.py  validation_gate.py
scanner/data/: article_recital_index.json  recitals.json
scanner/modules/art04-ai-literacy/: interim-standard.json  module.py
scanner/modules/art05-prohibited-practices/: interim-standard.json  module.py
scanner/modules/art06-risk-classification/: interim-standard.json  module.py
scanner/modules/art08-compliance-with-requirements/: __init__.py  module.py
scanner/modules/art09-risk-management/: interim-standard.json  module.py
scanner/modules/art10-data-governance/: interim-standard.json  module.py
scanner/modules/art11-technical-documentation/: interim-standard.json  module.py
scanner/modules/art111-transitional-provisions/: module.py
scanner/modules/art12-record-keeping/: interim-standard.json  module.py
scanner/modules/art13-transparency/: interim-standard.json  module.py
scanner/modules/art14-human-oversight/: interim-standard.json  module.py
scanner/modules/art15-accuracy-robustness/: interim-standard.json  module.py
scanner/modules/art16-provider-obligations/: module.py
scanner/modules/art17-quality-management/: interim-standard.json  module.py
scanner/modules/art18-documentation-keeping/: module.py
scanner/modules/art19-automatically-generated-logs/: module.py
scanner/modules/art20-corrective-actions/: module.py
scanner/modules/art21-cooperation-with-authorities/: module.py
scanner/modules/art22-authorised-representatives/: module.py
scanner/obligations/: art04-ai-literacy.json  art05-prohibited-practices.json  art06-risk-classification.json  art08-compliance-with-requirements.json  art09-risk-management.json  art10-data-governance.json  art11-technical-documentation.json  art111-transitional-provisions.json  art12-record-keeping.json  art13-transparency.json  art14-human-oversight.json  art15-accuracy-robustness.json  art16-provider-obligations.json  art17-quality-management.json  art18-documentation-keeping.json  art19-automatically-generated-logs.json  art20-corrective-actions.json  art21-cooperation-with-authorities.json  art22-authorised-representatives.json  art23-obligations-of-importers.json  art24-obligations-of-distributors.json  art25-value-chain-responsibilities.json  art26-deployer-obligations.json  art27-fundamental-rights-impact.json  art41-common-specifications.json  art43-conformity-assessment.json  art47-declaration-of-conformity.json  art49-registration.json  art50-transparency-obligations.json  art51-gpai-classification.json  art52-classification-notification.json  art53-obligations-gpai-providers.json  art54-gpai-authorised-representatives.json  art55-gpai-systemic-risk.json  art60-real-world-testing.json  art61-informed-consent-testing.json  art71-eu-database.json  art72-post-market-monitoring.json  art73-serious-incident-reporting.json  art80-non-high-risk-misclassification.json  (+4 more)
scanner/tests/: CI_MATRIX_BUGS.md  G1_BUGS.md  G1_COMPLETE.md  conftest.py  e2e_broken_link.py  e2e_sub3b.py  quality_audit.py  test_action_plans.py  test_ai_observation_phase3.py  test_ai_recommended_scope.py  test_approach_b_post_process.py  test_archetypes.py  test_art04_python.py  test_art05_python.py  test_art06_python.py  test_art08_python.py  test_art09_python.py  test_art10_python.py  test_art111_python.py  test_art11_python.py  test_art12_multilang.py  test_art12_python.py  test_art13_python.py  test_art14_python.py  test_art15_python.py  test_art16_python.py  test_art17_python.py  test_art18_python.py  test_art19_python.py  test_art20_python.py  test_art21_python.py  test_art22_python.py  test_art23_python.py  test_art24_python.py  test_art25_python.py  test_art26_python.py  test_art27_python.py  test_art41_python.py  test_art43_python.py  test_art47_python.py  (+82 more)
scanner/tests/e2e/: conftest.py  (+6 more)
scripts/: pre-commit.sh
test-reports/: self-scan-2026-04-19.md  self-scan-2026-04-20.md  self-scan-2026-04-22.md  self-scan-2026-04-23.md  self-scan-2026-04-24.md  self-scan-2026-04-25.md  self-scan-2026-04-26.md  self-scan-2026-04-27.md  self-scan-2026-04-28.md  self-scan-2026-04-29.md  self-scan-2026-04-30.md  self-scan-2026-05-01.md  self-scan-2026-05-02.md  self-scan-2026-05-03.md  self-scan-2026-05-04.md  self-scan-2026-05-05.md  self-scan-2026-05-06.md  self-scan-2026-05-07.md
(+97 files in other folders)
