[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliancelint"
version = "1.0.5"
description = "Open-source compliance linter for code — scan your project against EU AI Act requirements"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "ki-sum", email = "info@ki-sum.ai"},
]
keywords = ["compliance", "eu-ai-act", "linter", "regulation", "ai", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
compliancelint = "scanner.cli:main"
compliancelint-server = "scanner.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/ki-sum/compliancelint"
Repository = "https://github.com/ki-sum/compliancelint"
Issues = "https://github.com/ki-sum/compliancelint/issues"

[tool.setuptools.packages.find]
include = ["scanner*"]

[tool.setuptools.package-data]
scanner = [
    "modules/*/interim-standard.json",
    "obligations/*.json",
    "sources/**/*.json",
]
