[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliancelint"
version = "1.1.0"
description = "EU AI Act compliance: scan, attest, document — from your IDE. Source-available, MCP-native, AI-assisted."
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
authors = [
    {name = "ki-sum", email = "info@ki-sum.ai"},
]
keywords = ["compliance", "eu-ai-act", "linter", "attestation", "evidence-collection", "regulation", "ai", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp>=1.0",
    # Optional telemetry — initialised only when the user opts in via
    # cl_connect (writes ~/.compliancelint/sentry.json). When that file
    # is absent, sentry_sdk is imported lazily and otherwise idle.
    # Kept as a regular dep (not extras_require) so the cl_connect
    # opt-in flow doesn't need to instruct users to run a second
    # pip install — keeps the consent UX one prompt instead of two.
    # See scanner/core/telemetry.py for the full opt-in / scrub design.
    "sentry-sdk>=2.0",
]

[project.scripts]
compliancelint = "scanner.cli:main"
compliancelint-server = "scanner.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/ki-sum/compliancelint"
Repository = "https://github.com/ki-sum/compliancelint"
Issues = "https://github.com/ki-sum/compliancelint/issues"

[tool.setuptools.packages.find]
include = ["scanner*"]

[tool.setuptools.package-data]
scanner = [
    "modules/*/interim-standard.json",
    "obligations/*.json",
    "sources/**/*.json",
]
